# dynamical-systems

./:  test  .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  build.py  build.zig  build.zig.zon  dynamical-systems.spec  main.c  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_package.py
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
dynamical_systems/: __init__.py  __main__.py  _version.py  core.py  exceptions.py
dynamical_systems/tests/: test_job_portrait.py  test_ode_linear.py  test_solver_rk4.py
dynamical_systems/ui/: __init__.py
dynamical_systems/ui/templates/: index.html
src/: ArgParser.zig  Argument.zig  cli.zig  core.h  ds.c  ds.h  dynamical_systems.zig  main.zig  py_common.c  py_common.h  py_job.c  py_job.h  py_ode.c  py_ode.h  py_solver.c  py_solver.h  py_utils.c  py_utils.h  python.c
src/c/: core.h  dynlib.h  py_common.c  py_common.h  py_job.c  py_job.h  py_ode.c  py_ode.h  py_solver.c  py_solver.h
src/c/job/: portrait.c
src/c/ode/: linear.c  (+1 more)
src/cli/: ArgParser.zig  arg_parser.zig  hash_map.zig
src/core/: common.h  ode.c  ode.h  solver.c  solver.h
src/dynamical_systems/: Argument.zig  job.zig  ode.zig  solver.zig
src/job/: Portrait.zig  job.zig  phase_portrait.c  phase_portrait.h  portrait.c
src/ode/: Linear.zig  linear.c  linear.h  ode.zig
src/python/: __init__.py  __main__.py
src/solver/: RK4.zig  dopri5.c  dopri5.cpp  rk4.c  rk4.h  solver.zig
tests/: conftest.py  test_components.py  test_job_portrait.py  test_ode_linear.py  test_solver_rk4.py
ui/: app.py
ui/templates/: index.html
(+13 files in other folders)
