[build-system]
requires = ["setuptools>=45,<70", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamical-systems"
dynamic = ["version"]
description = "A high-level Python interface for numerical analysis of dynamical systems"
authors = [
    {name = "Serhii Donetskyi", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "setuptools",
    "build",
    "pre-commit",
]

[project.scripts]
dynamical-systems = "dynamical_systems.__main__:main"

[project.urls]
Homepage = "https://github.com/serhii-donetskyi/dynamical-systems"
Repository = "https://github.com/serhii-donetskyi/dynamical-systems"
Issues = "https://github.com/serhii-donetskyi/dynamical-systems/issues"

[tool.setuptools_scm]
write_to = "src/python/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.setuptools]
packages = ["dynamical_systems"]

[tool.setuptools.package-dir]
dynamical_systems = "src/python"

[tool.setuptools.package-data]
dynamical_systems = ["*.so", "**/*.so", "*.dll", "**/*.dll"]
